# Jetson-Mamba-SSM

./: .gitignore  CITATION.cff  GITHUB_SETUP_CHECKLIST.md  LICENSE  README.en-US.md  README.md  README.zh-CN.md  README_zh-CN.md  SEO_CHECKLIST.md  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/assets/: README.md
docs/: CAUSAL_CONV1D.md  JETSON_MAMBA_SSM_BUILD_GUIDE.md  MAMBA_SSM_JETSON_FIX.md  PRECISION_EXPORT_TEST_REPORT.md  RELEASE_GUIDE.md  SOURCE_CODE_CHANGES.md  WHEELS_ARCHIVE.md  YOLOV10_TENSORRT_EXPORT_GUIDE.md
patches/: 00_selective_scan_interface.py.patch  01_ssd_combined.py.patch
scripts/: check_mamba_install.py  install_wheels.py  main.py  run_with_mamba.sh
scripts/install/: rebuild_causal_conv1d_wheel.py  rebuild_wheels.py
scripts/patch/: apply_onnx_export_patch.py  apply_patches.py
scripts/test/: test_export_precision.py  test_onnx_tensorrt_export.py  verify.py
scripts/utils/: backup_so_files.py  create_release.py  model_info.py  prepare_release.py
src/: fix_causal_conv1d.py  selective_scan_cuda.py
src/mamba_ssm/distributed/: distributed_utils.py
src/mamba_ssm/ops/: selective_scan_interface.py
src/mamba_ssm/ops/triton/: ssd_combined.py
src/sitecustomize/: sitecustomize.py
src/yolo/: mamba_yolo.py
