[project]
name = "jetson-mamba-ssm"
version = "1.0.0"
description = "Complete solution for running YOLOv10 + Mamba SSM on NVIDIA Jetson (ARM64) with TensorRT support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Jetson Mamba-SSM Contributors", email = "snowolf-zlex@users.noreply.github.com"}
]
keywords = [
    "mamba",
    "ssm",
    "state-space-model",
    "jetson",
    "nvidia",
    "arm64",
    "tensorrt",
    "onnx",
    "yolov10",
    "deep-learning",
    "object-detection",
    "edge-ai",
    "cuda",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

[project.urls]
Homepage = "https://github.com/snowolf-zlex/Jetson-Mamba-SSM"
Documentation = "https://github.com/snowolf-zlex/Jetson-Mamba-SSM#readme"
Repository = "https://github.com/snowolf-zlex/Jetson-Mamba-SSM.git"
Issues = "https://github.com/snowolf-zlex/Jetson-Mamba-SSM/issues"
Changelog = "https://github.com/snowolf-zlex/Jetson-Mamba-SSM/releases"

[project.scripts]
jetson-mamba-apply-patches = "scripts.apply_patches:main"
jetson-mamba-verify = "scripts.verify:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
